# ml_based_gesture_controlled_robot

./: .gitignore  README.md  build_project.sh
gesture_recognition/: package.xml  setup.cfg  setup.py
gesture_recognition/gesture_recognition/: gesture_node_ML_v3.py  gesture_node_v1.py  gesture_node_v2.py  scaler.joblib  temp_test.py
gesture_recognition/launch/: gesture_recognition.launch.py
model_and_data_generation/: gesture_data_collection.py  gesture_pred_model.py
model_and_data_generation/data/: Continue moving backward_data.csv  Continue moving forward_data.csv  Decrease speed_data.csv  Increase speed_data.csv  Stop_data.csv  Turn left_data.csv  Turn right_data.csv  Wait_data.csv
model_and_data_generation/models/: label_encoder.joblib
motion_translator/: package.xml  setup.cfg  setup.py
motion_translator/launch/: motion_translator.launch.py
motion_translator/motion_translator/: motion_translator_node.py  motion_translator_node_ML.py
robot_control/: package.xml  setup.py
robot_control/launch/: robot_control.launch.py
robot_control/robot_control/: robot_node.py
robot_control/robot_control/launch/: robot_control.launch.py
robot_control/rviz/: robot_visual.rviz
unified_launch/: package.xml  setup.cfg  setup.py
unified_launch/launch/: gesture_controlled_robot.launch.py
