<?xml version="1.0"?>
<package format="3">
  <name>gesture_recognition</name>
  <version>0.0.0</version>
  <description>Gesture Recognition Module</description>
  <maintainer email="shubham@example.com">Shubham</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
