<?xml version="1.0"?>
<package format="3">
  <name>motion_translator</name>
  <version>0.0.1</version>
  <description>Translates gesture commands into velocity commands for robot simulation.</description>

  <maintainer email="your@email.com">Shubham</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
